Fix HTML structure and update order button link
Updated the HTML structure and fixed the button link.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             border-radius: 12px;
             transition: background-color 0.3s ease;
             font-family: inherit;
-            width; 50%;
         }
         .order-button:hover {
             background-color: #4B5320;
@@ -100,7 +99,7 @@
             
             </div>
             
-            <a href="downpayment.html">
+            <a href="order.html">
                 <button class="order-button">Start Order</button>
             </a>
         </div>
